package donatrack.model.persona;

public enum Genero {
    MASCULINO,
    FEMENINO,
    OTRO
}
